[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "filelist-tools"
dynamic = ["version"]
description = 'Tools for making and working with a filelist (an inventory of files in a given location).'
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = [ "catalog", "filelist", "filelist-tools"]

authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]

[project.urls]
Source = "https://github.com/wmelvin/filelist-tools"
# Documentation = "https://github.com/wmelvin/filelist-tools#readme"
# Issues = "https://github.com/wmelvin/filelist-tools/issues"

[project.scripts]
mkfilelist = "make_filelist:mkfilelist.main"
filelist_export = "export_filelist:filelist_export.main"
filelist_merge = "merge_filelist:filelist_merge.main"

[tool.setuptools.dynamic]
version = {attr = "make_filelist/__about__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = ["src"]
