[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "filelist-tools"
dynamic = ["version"]
description = 'Tools for making and working with a filelist (an inventory of files in a given location).'
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [ "catalog", "filelist", "filelist-tools"]

authors = [
  { name = "Bill Melvin", email = "bill@billmelvin.com" },
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]

[project.urls]
Source = "https://github.com/wmelvin/filelist-tools"

[project.scripts]
mkfilelist = "make_filelist:mkfilelist.main"
filelist_export = "export_filelist:filelist_export.main"
filelist_merge = "merge_filelist:filelist_merge.main"

[tool.setuptools.dynamic]
version = {attr = "make_filelist.__about__.__version__"}

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-uv
envlist = py310, py311, py312, py313, py314

[testenv]
runner = uv-venv-runner
description = Run tests with pytest
commands = pytest
"""

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
# extend-select = ["ALL"]
ignore = [
    "ISC001",  # single-line-implicit-string-concatenation
    "PLR2004", # magic value
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101", # assert
]
